cleanup scratch before prepping for vignette

--- a/inst/scratch.Rmd
+++ b/inst/scratch.Rmd
@@ -5,7 +5,9 @@ output: html_document
 
 ```{r}
 gen_runtime_description(
-  c("dplyr", "sparklyr (>= 0.7.0-9020)", "pool (>= 0.1.4)"),
+  c("dplyr", 
+    "sparklyr (>= 0.7.0-9020)", 
+    "pool (>= 0.1.4)"),
   github = c("rstudio/pool", "rstudio/sparklyr")
 )
 ```
@@ -13,7 +15,6 @@ gen_runtime_description(
 
 ```{r}
 pkgs <- c("R6", "pillar (>= 1.2.1)")
-pkg_names <- vapply(strsplit(pkgs, "\\s"), function(x) x[[1]], character(1))
 runtime_desc <- gen_runtime_description(
   pkgs,
   github = c("r-lib/pillar"),
@@ -22,26 +23,7 @@ runtime_desc <- gen_runtime_description(
 )
 ```
 
-```{r}
-runtime_desc$write(
- "../tmp/DESCRIPTION"
-)
-```
 
-
-```{r}
-snapshot <- withr::with_libpaths(
-  "../tmp_lib",
-  {
-    remotes::install_deps(pkgdir = "../tmp")
-    gen_snapshot(pkg_names)
-  }
-)
-```
-
-```{r}
-writeLines(snapshot$lockfile, "runtime")
-```
 
 ```{r eval = FALSE}
 # setup install requirements
@@ -53,20 +35,6 @@ withr::with_libpaths("/Users/devin/clients/amgen/pkglock/inst/installreq",
                      )
 ```
 
-```{r}
-withr::with_libpaths("/Users/devin/clients/amgen/pkglock/inst/installreq", {
-  packrat::restore("gen-runtime")
-})
-```
-
-```{r}
-runtime_pkgs_path <- file.path("gen-runtime", "packrat", "lib", R.version$platform, getRversion())
-
-```
-
-```{r}
-list.files(runtime_pkgs_path)
-```
 
 ## using package functions
 
