--- a/inst/pkglock_test.Rmd
+++ b/inst/pkglock_test.Rmd
@@ -72,7 +72,6 @@ binary_runtime <- pkglock::install_runtime(rtdir, installerdir)
 
 ```{r}
 
-pkglist <- pkglock::build_package_list_from_library_dir(.libdir = "C:/dev/apps/R/3.4.3/library")
-cat(pkglock::gen_pkg_desc_from_package_list(pkglist, TRUE))
+cat(pkglock::gen_pkg_desc_from_libdir("C:/dev/apps/R/3.4.3/library", TRUE))
 
 ```
