--- a/inst/pkglock_test.Rmd
+++ b/inst/pkglock_test.Rmd
@@ -14,20 +14,17 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r }
 
 #Setup Installer
-installerdir <- file.path( getwd(),"pkglock/inst/installreq")
+installerdir <- file.path( getwd(),"pkglock_test_install_lib")
 dir.create(installerdir, showWarnings = FALSE, recursive = TRUE)
-devtools::install_github("bschulth/pkglock", lib=installerdir, force=TRUE, dependencies=TRUE)  
-
-#This seems to be needed also, but is not getting pulled in by default
-install.packages("remotes", lib = installerdir)
+if (!require("withr")) install.packages("withr")
+withr::with_libpaths(
+    installerdir,
+    {
+      devtools::install_github("bschulth/pkglock@amgen_bschulth", lib=installerdir, force=TRUE, dependencies=TRUE)  
+    }
+  )
 .libPaths( c( .libPaths(), installerdir) )
-
-#List installed packages in installerdir
-pkglock::build_package_list_from_library_dir(installerdir)
-#hmm...install_github() doesn't seem to respect lib=installerdir arg
-
-#hmm....seem to have to force load this here before calling rest of pkglock functions otherwise 
-library(remotes)
+library(pkglock)
 
 ```
 
