--- a/inst/scratch.Rmd
+++ b/inst/scratch.Rmd
@@ -3,7 +3,7 @@ title: "scratch"
 output: html_document
 ---
 
-```{r}
+```{r eval = FALSE}
 gen_runtime_description(
   c("dplyr", 
     "sparklyr (>= 0.7.0-9020)", 
@@ -12,12 +12,16 @@ gen_runtime_description(
 )
 ```
 
+```{r}
+library(pkglock)
+```
+
 
 ```{r}
-pkgs <- c("R6", "pillar (>= 1.2.1)")
+pkgs <- c("dplyr", "ggplot2 (>= 2.2.1.9000)", "purrr", "PKPDmisc")
 runtime_desc <- gen_runtime_description(
   pkgs,
-  github = c("r-lib/pillar"),
+  github = c("tidyverse/ggplot2"),
   name = "Devin Pastoor",
   email = "devin.pastoor@gmail.com"
 )
@@ -39,10 +43,42 @@ withr::with_libpaths("/Users/devin/clients/amgen/pkglock/inst/installreq",
 ## using package functions
 
 ```{r}
-tmpdir <- fs::path_temp()
+tmpdir <- "tmp"
 new_snap <- install_from_desc(runtime_desc, .dir = tmpdir)
+```
 
+```{r}
+new_snap$pkglibpath
+```
+
+```{r}
+new_snap$snapshot$tardir
+```
+
+
+here should probably copy both the binaries (optimization) and the tarballs
+(req) into the new runtime template. The binaries may be in other libs
+on the system.
+
+```{r}
 rtdir <- setup_runtime_template(new_snap$snapshot$lockfile, .dir = tmpdir)
+```
+
+```{r}
+## copy over tars + binaries at least in the libpath
+
+fs::dir_copy(new_snap$snapshot$tardir, fs::path(rtdir, "packrat"))
+# if going to do this, will need to get the full platform spec correct
+# eg x86_64-apple-darwin16.7.0/3.4.3/<libs>
+#fs::dir_copy(fs::dir_ls(new_snap$pkglibpath), fs::path(rtdir, "packrat", "lib"))
+```
+
+```{r}
+setdiff(basename(fs::dir_ls(new_snap$snapshot$tardir)), basename(fs::dir_ls(new_snap$pkglibpath)))
+setdiff( basename(fs::dir_ls(new_snap$pkglibpath)), basename(fs::dir_ls(new_snap$snapshot$tardir)))
+
+
+length(fs::dir_ls(new_snap$pkglibpath))
 ```
 
 ```{r}
@@ -50,7 +86,7 @@ list.files(rtdir, recursive = TRUE, all.files = TRUE)
 ```
 
 ```{r}
-binary_runtime <- install_runtime(rtdir, "/Users/devin/clients/amgen/pkglock/inst/installreq")
+binary_runtime <- install_runtime(rtdir)
 ```
 
 
